--- a/.gitmodules
+++ b/.gitmodules
@@ -1390,3 +1390,6 @@
 [submodule "linux-80211n-csitool"]
 	path = linux-80211n-csitool
 	url = https://github.com/dhalperi/linux-80211n-csitool
+[submodule "Wifi-Dumper"]
+	path = Wifi-Dumper
+	url = https://github.com/Viralmaniar/Wifi-Dumper
