--- a/.gitmodules
+++ b/.gitmodules
@@ -1486,3 +1486,6 @@
 [submodule "osx-wificleaner"]
 	path = osx-wificleaner
 	url = https://github.com/mubix/osx-wificleaner
+[submodule "whoishere.py"]
+	path = whoishere.py
+	url = https://github.com/hkm/whoishere.py
