--- a/.gitmodules
+++ b/.gitmodules
@@ -1489,3 +1489,6 @@
 [submodule "whoishere.py"]
 	path = whoishere.py
 	url = https://github.com/hkm/whoishere.py
+[submodule "WiBroute"]
+	path = WiBroute
+	url = https://github.com/Brom95/WiBroute
