--- a/.gitmodules
+++ b/.gitmodules
@@ -1507,3 +1507,6 @@
 [submodule "netattack"]
 	path = netattack
 	url = https://github.com/chrizator/netattack
+[submodule "hcxtools"]
+	path = hcxtools
+	url = https://github.com/ZerBea/hcxtools
