--- a/.gitmodules
+++ b/.gitmodules
@@ -1618,3 +1618,6 @@
 [submodule "wifi-monitor"]
 	path = wifi-monitor
 	url = https://github.com/eye9poob/Wifi-monitor
+[submodule "PyRIC"]
+	path = PyRIC
+	url = https://github.com/wraith-wireless/PyRIC
