--- a/.gitmodules
+++ b/.gitmodules
@@ -1834,3 +1834,9 @@
 [submodule "wifi-data-safari"]
 	path = wifi-data-safari
 	url = https://github.com/brangerbriz/wifi-data-safari
+[submodule "wifite-patcher"]
+	path = wifite-patcher
+	url = https://github.com/jankubatt/wifite-patcher
+[submodule "wifiteinstall"]
+	path = wifiteinstall
+	url = https://github.com/trudertube/wifiteinstall
